Closed Bug 1687847 Opened 5 years ago Closed 5 years ago

Image attachments loaded in message reader pane instead of opened

Categories

(Thunderbird :: Message Reader UI, defect, P1)

defect

Tracking

(thunderbird_esr78 unaffected, thunderbird86+ verified)

VERIFIED FIXED
87 Branch
Tracking Status
thunderbird_esr78 --- unaffected
thunderbird86 + verified

People

(Reporter: darktrojan, Assigned: darktrojan)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

I don't know why but something in the process of saving an attachment isn't working properly any more. Image attachments get loaded in the message pane, which isn't what we want.

Keywords: regression

I've worked out this doesn't happen if the message pane has not loaded a web page at any point. So if you don't have the Start Page enabled, only load messages, then open an attachment, it works as before. Not sure why.

Sorry I filed bug 1687937 for more variations. Text and PDF attachments behave weird as well.

I think this is the same issue: Having a web page, for me bugzilla bugs, loaded in a Feed and clicking on a link opens the link in this view instead opening in the browser.

Does priority=P2 square with severity=blocker?

I was working on something more important but it turned out not to be a thing. I've been on this ever since, and I think at last I have a fix. Waiting on a Try run.

Priority: P2 → P1
Assignee: nobody → geoff
Status: NEW → ASSIGNED

The presence of this flag forces a docShell to pass loading onto the external helper app service. In some special cases we don't want this, so I've white-listed certain content types.

Depends on D102891

Target Milestone: --- → 86 Branch

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/49c00a6f17ef
Set nsIChannel::DISPOSITION_ATTACHMENT on attachments so they open when expected. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Status: RESOLVED → REOPENED
Resolution: FIXED → ---

Comment on attachment 9200577 [details]
Bug 1687847 - Set nsIChannel::DISPOSITION_ATTACHMENT on newsgroup attachments too. r?mkmelin

[Approval Request Comment]
Regression caused by (bug #):
User impact if declined: attachments in newsgroups behave badly
Testing completed (on c-c, etc.): not yet, this is a pre-emptive request
Risk to taking this patch (and alternatives if risky): very small, this is newsgroups only, and I've already made similar changes to the other protocols

Attachment #9200577 - Flags: approval-comm-beta?
Target Milestone: 86 Branch → 87 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/001de226b946
Set nsIChannel::DISPOSITION_ATTACHMENT on newsgroup attachments too. r=mkmelin

Status: REOPENED → RESOLVED
Closed: 5 years ago5 years ago
Resolution: --- → FIXED
+  if (spec.Find("part=") >= 0 && spec.Find("type=message/rfc822") < 0 &&
+      spec.Find("type=application/x-message-display") < 0 &&
+      spec.Find("type=application/pdf") < 0) {

We usually test for kNotFound.

Comment on attachment 9200577 [details]
Bug 1687847 - Set nsIChannel::DISPOSITION_ATTACHMENT on newsgroup attachments too. r?mkmelin

[Triage Comment]
Approved for beta

Attachment #9200577 - Flags: approval-comm-beta? → approval-comm-beta+

Image attachments no longer open in the message reader pane in my tests of 86.0b2 on Windows 10 and Fedora 33 Workstation.

Status: RESOLVED → VERIFIED
Regressions: 1690395
Regressions: 1693019
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: