Bug 1687847 - Set nsIChannel::DISPOSITION_ATTACHMENT on attachments so they open when expected. r=mkmelin

The presence of this flag forces a docShell to pass loading onto the external helper app service. In some special cases we don't want this, so I've white-listed certain content types.

Differential Revision: https://phabricator.services.mozilla.com/D102892

--HG--
extra : moz-landing-system : lando